--- a/mysite/myapp/templates/index.html
+++ b/mysite/myapp/templates/index.html
@@ -19,5 +19,9 @@
       <li>{{ person.name }} - {{ person.email }}</li>
       {% endfor %}
     </ul>
+    <form action="">
+      {% csrf_token %} 
+      {{form}}
+    </form>
   </body>
 </html>
